# to-do

./: .gitignore  CMakeLists.txt  README.md  TO-DO  TO-DO.md  build.sh  build_test.sh
docs/: roadmap.md
module_3/: README  TO-DO  board.cpp  board.h  day.cpp  day.h  global_lib.cpp  global_lib.h  log_duration.h  main.cpp  str_switch.h  task.cpp  task.h  task_lib.h  week.cpp  week.h
module_3/base_class/: baseclass_day.cpp  baseclass_day.h  baseclass_week.cpp  baseclass_week.h
module_3/search/: search.h  string_processing.h  test.cpp
src/: CMakeLists.txt  TO-DO  log_duration.h  main.cpp
src/app/: CMakeLists.txt  application.cpp  application.h
src/base_class/: baseclass_board.cpp  baseclass_board.h  baseclass_day.cpp  baseclass_day.h  baseclass_task.cpp  baseclass_task.h  baseclass_week.cpp  baseclass_week.h
src/base_class/tests/: CMakeLists.txt  test_day.cpp  test_main.cpp  test_task.cpp
src/common/: CMakeLists.txt  commands.h  commands_id.h  header_message.h  message_core2ui.h  message_ui2core.h  screensnapshot.h
src/common/core_to_ui/: screensnapshot.h
src/common/core_to_ui/payloads/: payload_setting.h  payload_start.h
src/common/payloads/: payload_main.h  payload_setting.h
src/common/ui_to_core/: commandmessage.h  payload_ui.h
src/common/ui_to_core/payloads/: payload_create_task.h
src/core/: CMakeLists.txt  handler.cpp  handler.h  model.cpp  model.h
src/core/handlers/: CMakeLists.txt  handle_add_task.cpp  handle_add_task.h
src/core/models/: CMakeLists.txt  model_service.cpp  model_service.h  model_task.cpp  model_task.h
src/core/models/search/: CMakeLists.txt  search.h  string_processing.cpp  test.cpp
src/lib/: CMakeLists.txt  global_lib.cpp  global_lib.h  lib.cpp  lib.h
src/lib/base_classes/: task.cpp  task.h
src/lib/classes/: service_class.h  task.h
src/pos/: CMakeLists.txt  pos_lib.cpp  pos_lib.h  pos_main.cpp  pos_main.h  pos_widget.h  pos_window.h
src/pos/base_class/: baseclass.h  baseclass_board.cpp  baseclass_board.h  baseclass_day.h  baseclass_task.cpp  baseclass_task.h  baseclass_week.cpp  baseclass_week.h
src/pos/base_class/tests/: main  test_day.cpp
src/pos/classes/: CMakeLists.txt  baseclass_board.cpp  baseclass_board.h  baseclass_day.cpp  baseclass_day.h  baseclass_service.cpp  baseclass_task.h
src/pos/classes/search/: search.h
src/pos/classes/tests/: test_task.cpp
src/search/: search.cpp
src/ui/: CMakeLists.txt  ui.cpp  ui.h  ui_application.h  ui_factory.cpp  ui_factory.h  ui_imp.h  ui_main.cpp  ui_main.h
src/ui/canban/to-do/base_class/: baseclass_day.cpp  baseclass_task.cpp  baseclass_week.cpp
src/ui/canban/to-do/base_class/search/: search.h
src/ui/canban/to-do/base_class/tests/: main.cpp  test_week.cpp
src/ui/console_ui/: CMakeLists.txt  cli_dialog.h  cui_lib.h  cui_main.cpp  cui_main.h  cui_widget.cpp  cui_widget.h  main  main.cpp  test.cpp
src/ui/console_ui/cui_widgets/: cui_dialog.cpp  cui_dialog.h  cui_entry.cpp  cui_entry.h  cui_label.cpp  cui_label.h  cui_radio.cpp  cui_radio.h  cui_screen.cpp  cui_screen.h  cui_slider.cpp  cui_slider.h  cui_widget_box.cpp  cui_widget_box.h
src/ui/console_ui/cui_widgets/cdk/: binding.c  button.h  cdk_objs.h  cdkscreen.c  dialog.c  entry.c  fscale.h  fslider.h  radio.c  scale.h  slider.c  slider.h  uscale.h
src/ui/console_ui/cui_widgets/test/: Makefile  test  test.cpp
src/ui/console_ui/src/: CMakeLists.txt  cui_dialog.cpp  cui_dialog.h  cui_label.cpp  cui_label.h  cui_lib.cpp  cui_lib.h  cui_screen.h
src/ui/console_ui/src/cdk/: CMakeLists.txt  cdk_params.c  cdk_params.h  cdkscreen.c  dscale.h  uslider.h
src/ui/cui/: CMakeLists.txt  cui_application.cpp  cui_application.h  cui_command.cpp  cui_command.h  cui_container.cpp  cui_container.h  cui_core.cpp  cui_iterator.h  cui_lib.cpp  cui_lib.h  cui_main.cpp  cui_main.h  cui_screen.cpp  cui_screen.h  cui_surface.cpp  cui_surface.h  cui_widget.cpp  cui_widget.h  cui_window.cpp  cui_window.h
src/ui/cui/command/: add_new_task.cpp  add_new_task.h
src/ui/cui/commands/: add_new_task.cpp  add_new_task.h  none_command.h
src/ui/cui/cui_widgets/: CMakeLists.txt  cui_border.cpp  cui_border.h  cui_dialog.cpp  cui_dialog.h  cui_entry.cpp  cui_entry.h  cui_label.cpp  cui_label.h  cui_radio.cpp  cui_radio.h  cui_scroll_list.cpp  cui_scroll_list.h  cui_slider.cpp  cui_slider.h  cui_widget_box.cpp  cui_widget_box.h
src/ui/cui/cui_widgets/cdk/: CMakeLists.txt  alphalist.h  binding.c  binding.h  buttonbox.c  calendar.c  calendar.h  cdk.h  cdk_int.h  cdk_version.h  cdkscreen.c  cdkscreen.h  dscale.h  fscale.h  graph.c  graph.h  histogram.h  itemlist.c  label.c  label.h  marquee.h  matrix.c  mentry.c  menu.c  radio.c  scale.h  scroll.c  slider.h  swindow.c  swindow.h  template.h  traverse.c  uscale.h  uslider.h
src/ui/cui/cui_widgets/test/: Makefile  test  test.cpp
src/ui/cui/iterator/: list_iter.h
src/ui/cui/windows/: cui_window_main.cpp  cui_window_main.h  cui_window_setting.cpp  cui_window_setting.h  cui_window_start.cpp  cui_window_start.h
src/ui/сui/: cui_iterator.h  cui_lib.cpp  cui_screen.cpp  cui_screen.h  cui_surface.h  cui_widget.cpp  cui_widget.h  cui_window.cpp  cui_window.h
src/ui/сui/base_classes/: task.h
src/ui/сui/cui_widgets/: cui_dialog.cpp  cui_dialog.h  cui_entry.cpp  cui_entry.h  cui_label.cpp  cui_label.h  cui_radio.cpp  cui_radio.h  cui_slider.cpp  cui_slider.h  cui_widget_box.cpp  cui_widget_box.h
src/ui/сui/cui_widgets/cdk/: alphalist.c  button.c  button.h  buttonbox.h  cdk_config.h  cdk_objs.c  cdk_objs.h  dialog.c  dialog.h  entry.c  entry.h  fselect.c  fselect.h  fslider.h  histogram.c  itemlist.h  marquee.c  matrix.h  mentry.h  menu.h  popup_label.c  position.c  radio.c  radio.h  scroll.h  selection.c  selection.h  slider.c  swindow.c  template.c  viewer.c  viewer.h
src/ui/сui/cui_widgets/test/: Makefile  test  test.cpp
src/ui/сui/windows/: cui_window_hello.cpp  cui_window_hello.h
