
file(GLOB LIB_INCLUDES
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
)

file(GLOB LIB_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

add_library(lib ${LIB_SOURCES} ${LIB_INCLUDES})

target_include_directories(lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
